# openclaw

./: AGENTS.md  CHANGELOG.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  full-release-validation.yml  openclaw-performance.yml  openclaw-release-publish.yml  pr-cache-cleanup.yml  vitest-cache-warm.yml
apps/.i18n/: apple-translation-contradictions.json  native-source.json
apps/ios/: project.yml
apps/linux/: README.md
apps/linux/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/linux/src-tauri/src/: main.rs  tray.rs
apps/macos/: Package.resolved  Package.swift
config/: max-lines-baseline.txt
docs/: ci.md  docs_map.md
docs/.generated/: plugin-sdk-api-baseline.sha256
docs/automation/: tasks.md
docs/cli/: doctor.md
docs/gateway/: configuration-reference.md
docs/plugins/: building-plugins.md
docs/web/: control-ui.md
extensions/acpx/: package.json
extensions/admin-http-rpc/: package.json
extensions/alibaba/: package.json
extensions/amazon-bedrock/: package.json
extensions/amazon-bedrock-mantle/: package.json
extensions/anthropic-vertex/: package.json
extensions/exa/: package.json
scripts/: android-app-i18n.ts  apple-app-i18n.ts  check-control-ui-performance.mjs  check-session-accessor-boundary.mjs  ci-run-node-test-shard.d.mts  ci-run-node-test-shard.mjs  deadcode-exports.baseline.mjs  install.sh  native-app-i18n.ts  openclaw-npm-postpublish-verify.ts  package-mac-app.sh  release-check.ts  test-projects.test-support.mjs
test/: openclaw-npm-postpublish-verify.test.ts  release-check.test.ts  setup-openclaw-runtime.ts
(+585 files in other folders)
